--- a/src/main/webapp/css/my.css
+++ b/src/main/webapp/css/my.css
@@ -10,11 +10,23 @@ td, tr {
 .count {
     display: flex;
     flex-flow: row;
+    align-items: baseline;
 
 }
+
 .page-size {
-    width: auto;
-    height: 1rem;
-    margin-left: 5px;
+   align-self: center;
+
+}
+
+.paging-buttons {
+    display: flex;
+    flex-flow: row;
+}
+
+.button-row {
+
+    height: 25px;
+    width: 25px;
 }
 
